2005-05-10 J.R. Heisey <jrheisey@sourceforge.com>
	* cli/cmd_load.cc: Updated on line help for load command.
	* gui/gui_src_asm.cc: Removed a call to gtk_widget_destory()
	in SourcePage::Close() where it was causing a crash in Windows.
	* cli/scan.ll: Defined literal string values to be quoted. This
	was done so that quoted Windows paths in the load command to 
	accommodate colons for drive designation and backslashes for
	folder delimiters.
	* gpsim/main.cc: Added the gpsim.exe startup folder to the
	module/library search path.
	* src/sim_context.cc, src/errors.h: Added an error message to CSimulationContext::
	LoadProgram().
	* cli/cmd_module.cc, src/modules.cc, src/modules.h,
	src/os_dependent.cc, gpsim/main.cc: Added code to not load
	a module library that is already loaded.

2005-05-06 J.R. Heisey <jrheisey@sourceforge.com>
	* gui/gui_regwin.cc:  Fixed crash that occurs when RAM register
	count is not a multiple of 16.
	* plat/win32/gpsim.def: Added new function reference.
	* src/processor.cc:  Fixed broken list command
	* src/sim_context.cc: Fixed broken register output on stepping
	that broken on previous check in. Test for open file failure.
	* src/program_files.h: Add new error code.

2005-05-05 J.R. Heisey <jrheisey@sourceforge.com>
	* cli/cmd_break.cc, cli/cmd_disasm.cc, cli/cmd_dump.cc,
	cli/cmd_frequency.cc, cli/cmd_list.cc, cli/cmd_load.cc,
	cli/cmd_load.h, cli/cmd_log.cc, cli/cmd_processor.cc,
	cli/cmd_reset.cc, cli/cmd_step.cc, cli/cmd_x.cc, cli/command.cc,
	cli/command.h, cli/input.cc, cli/input.h, cli/parse.yy,
	src/cod.cc, src/cod.h, src/hexutils.cc, src/Makefile.am,
	src/modules.h, src/os_dependent.cc, src/pic-processor.cc,
	src/pic-processor.h, src/processor.cc, src/processor.h,
	src/program_files.cc, src/program_files.h, src/sim_context.cc,
	src/sim_context.h, src/src.vcproj, src/symbol.cc, src/symbol.h,
	config_win32.h.in, configure.ac, plat/win32/gpsim.def,
	gui/gui_menu.cc, gui/gui_src_asm.cc, gui/gui_statusbar.cc,
	gpsim/Makefile.am: